# pyrsistent-ext

./: LICENSE  README.md  pyproject.toml
pyrsistent_ext/: __init__.py  _precordext.py
tests/: precordext_test.py  recordext_test.py  test_precord_ext.py
