[tool.poetry]
name = "pyrsistent-ext"
version = "0.1.0"
description = "Extensions to pyrsistent"
authors = ["David Naughton <nihiliad@gmail.com>", "Karl Kaess <kaes0001@umn.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyrsistent = "^0.20.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
